修正项目结构